--- a/src/app/style.css
+++ b/src/app/style.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    background-color: blue;
+.button{
+    border-radius: 25px;
+    background-color: aqua;
+
 }
